# Tags

./: .gitignore  README.md  Tags.cabal
src/Taglib/: Ascii.hs  BinaryIO.hs  BinaryIOCommon.hs  BinaryInput.hs  BinaryOutput.hs  Exceptions.hs  ItemData.hs  Signatures.hs  StringUtils.hs  StringUtilsBS.hs  Trace.hs
src/Taglib/Ape/: ApeHeader.hs  ApeItem.hs  ApeTag.hs
src/Taglib/Id3v1/: Genres.hs  Id3v1Tag.hs
src/Taglib/Id3v2/: CommonIO.hs  Compatibility.hs  Encoding.hs  ExtendedHeader.hs  Frames.hs  Header.hs  PictureType.hs  SynchSafe.hs  TextFrameUtils.hs  TextType.hs  URLType.hs
src/Taglib/Vorbis/: VorbisComment.hs  VorbisItem.hs
src/Tags/: Ascii.hs  BinaryIO.hs  BinaryIOCommon.hs  BinaryInput.hs  BinaryOutput.hs  Exceptions.hs  ItemData.hs  Signatures.hs  StringUtils.hs  StringUtilsBS.hs
src/Tags/Ape/: ApeHeader.hs  ApeItem.hs  ApeTag.hs
src/Tags/Id3v1/: Genres.hs  Id3v1Tag.hs
src/Tags/Id3v2/: CommonIO.hs  Compatibility.hs  Encoding.hs  ExtendedHeader.hs  Frames.hs  Header.hs  PictureType.hs  SynchSafe.hs  TextFrameUtils.hs  TextType.hs  URLType.hs
src/Tags/Vorbis/: VorbisComment.hs  VorbisItem.hs
