name:           Tags
version:        0.1
license:        BSD3
cabal-version:  >=1.2
build-type:     Simple
author:         Niko Korhonen
stability:      alpha
synopsis:       Multimedia file tagging library

library
  hs-source-dirs:  src
  build-depends:   base >= 4, binary, bytestring, array, containers, network, hslogger, encoding
  ghc-options:     -O2 -funbox-strict-fields
  extensions:      DeriveDataTypeable
  exposed-modules:
        Tags.BinaryInput,
        Tags.BinaryIO,
        Tags.BinaryIOCommon,
        Tags.BinaryOutput,
        Tags.ItemData,
        Tags.StringUtils,
        Tags.StringUtilsBS,
        Tags.Ape.ApeHeader,
        Tags.Ape.ApeItem,
        Tags.Ape.ApeTag,
        Tags.Id3v1.Genres,
        Tags.Id3v1.Id3v1Tag,
        Tags.Vorbis.VorbisComment,
        Tags.Vorbis.VorbisItem
  other-modules:   Tags.Exceptions

